# lucebox-hub

./: README.md
server/: CMakeLists.txt  CODEX.md  DEVELOPER.md  README.md  RESULTS.md  pyproject.toml
server/eval/: README.md
server/scripts/: bench_agent.py  bench_agent_loop.py  bench_daemon.py  bench_he.py  bench_llm.py  parity_laguna.py  quality_ab_simple.py  quality_humaneval_plus.py  run.py  test_full_compress_cache.py  test_multi_turn_prefix_cache.py  test_server_prefix_cache.py
server/share/: status.html
server/src/: flashprefill_kernels.cu  flashprefill_scalar.cu  internal.h
server/src/common/: backend_factory.cpp  backend_factory.h  backend_ipc.cpp  backend_ipc.h  backend_precision.cpp  backend_precision.h  cold_ffn_compute.h  cold_ffn_cpu.cpp  daemon_loop.cpp  dflash_draft_ipc.cpp  dflash_draft_ipc.h  dflash_draft_ipc_daemon.cpp  dflash_layer_split_runtime.h  dflash_spec_decode.cpp  ggml_graph_precision.h  model_backend.h  moe_hybrid_ffn_eval.cpp  moe_hybrid_ffn_eval.h  moe_hybrid_placement.cpp  moe_hybrid_placement.h  moe_hybrid_routing_stats.cpp  moe_hybrid_routing_stats.h  moe_hybrid_storage.cpp  moe_hybrid_storage.h  moe_hybrid_swap_manager.cpp  moe_hybrid_swap_manager.h  moe_hybrid_types.h  moe_hybrid_types_impl.h  spark_corpus.cpp  spark_corpus.h
server/src/gemma4/: gemma4_backend.cpp  gemma4_graph.cpp  gemma4_internal.h  gemma4_layer_split_adapter.cpp  (+1 more)
server/test/: test_dflash.cpp  test_flash_attn_sparse.cpp  test_qwen35moe_expert_placement.cpp  test_qwen35moe_routing_stats.cpp  test_qwen35moe_swap_manager.cpp  test_server_unit.cpp
(+134 files in other folders)
