[project]
name = "lucebox-dflash"
version = "0.1.0"
description = "Driver scripts and OpenAI-compatible server for the dflash C++/CUDA speculative-decoding daemon."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Lucebox" }]

# Runtime deps for the bench harness and helper scripts. The C++/CUDA
# decoder and HTTP server are built separately via cmake (see README).
dependencies = [
    "transformers>=4.50",
    "jinja2>=3.1",
    "torch>=2.0",
    "numpy>=1.26",
    "gguf>=0.10",
    "datasets>=2.20",
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

# No installable Python package — scripts are invoked directly via
# `.venv/bin/python scripts/bench_he.py …`. Declared as a virtual project so
# uv resolves deps but skips wheel building.
[tool.uv]
package = false
